<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/activity_guide"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_bg"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        tools:context="com.bwf.aiyiqi.ui.activity.GuideActivity">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:gravity="center_vertical|left"
            android:paddingLeft="10dp"
            android:text="@string/cancel"
            android:textColor="@color/main_tab_select"
            android:textSize="@dimen/text_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/about_you_bg"
            android:gravity="center"
            android:lineSpacingExtra="5dp"
            android:text="@string/understand_you" />

        <!-- 选择性别-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_sex"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_14" />

            <RadioGroup
                android:id="@+id/rg_select_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_man"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:button="@null"
                    android:drawableLeft="@drawable/rb_selector"
                    android:drawablePadding="10dp"
                    android:text="@string/man"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_14" />

                <RadioButton
                    android:id="@+id/rb_women"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:button="@null"
                    android:drawableLeft="@drawable/rb_selector"
                    android:drawablePadding="10dp"
                    android:paddingLeft="15dp"
                    android:text="@string/women"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_14" />

            </RadioGroup>

        </LinearLayout>

        <!-- 选择日期-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/divide_h"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_data"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_14" />

            <com.bwf.aiyiqi.ui.view.wheel.DateWheelPicker
                android:id="@+id/wheel_datapicker"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

        </LinearLayout>


        <!-- 选择性别-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/divide_h"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decoration_step"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_14" />

            <RadioGroup
                android:id="@+id/rg_decoration_step"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rb_step_01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:button="@null"
                    android:drawableLeft="@drawable/rb_selector"
                    android:drawablePadding="10dp"
                    android:paddingLeft="15dp"
                    android:text="@string/decoration_step_01"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_14" />

                <RadioButton
                    android:id="@+id/rb_step_02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:button="@null"
                    android:drawableLeft="@drawable/rb_selector"
                    android:drawablePadding="10dp"
                    android:paddingLeft="15dp"
                    android:text="@string/decoration_step_02"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_14" />

                <RadioButton
                    android:id="@+id/rb_step_03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:button="@null"
                    android:drawableLeft="@drawable/rb_selector"
                    android:drawablePadding="10dp"
                    android:paddingLeft="15dp"
                    android:text="@string/decoration_step_03"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_14" />

                <RadioButton
                    android:id="@+id/rb_step_04"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:button="@null"
                    android:drawableLeft="@drawable/rb_selector"
                    android:drawablePadding="10dp"
                    android:paddingLeft="15dp"
                    android:text="@string/decoration_step_04"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_14" />

            </RadioGroup>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_go_home"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/about_you_btn_normal"
            android:text="@string/we_togher_decoration"
            android:textColor="@color/white"
            android:textSize="@dimen/text_16" />

    </LinearLayout>
</layout>